add note about possible need for Java 17 options to startapp.sh